[package]
name = "pnacl-drivers"
version = "0.0.0"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
license = "MIT"

[[bin]]
name = "pnacl-clang"
path = "src/clang/main.rs"

[[bin]]
name = "pnacl-ld"
path = "src/ld/main.rs"

[[bin]]
name = "pnacl-opt"
path = "src/opt/main.rs"

[dependencies.pnacl-util]
path = "src/libs/util"

[dependencies.pnacl-clang-driver]
path = "src/libs/clang"

[dependencies.pnacl-ld-driver]
path = "src/libs/ld"

[dependencies.pnacl-opt-driver]
path = "src/libs/opt"
