[package]
license = "MIT"
name = "clang-driver"
repository = ""
version = "0.0.0"

[[bin]]
name = "wasm-clang"
path = "src/main.rs"

[[bin]]
name = "wasm-clangxx"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0"
regex = "*"
tempdir = "0.3.5"
env_logger = "0.6.1"

[dependencies.ld-driver]
path = "../ld"
version = "*"

[dependencies.util]
path = "../util"
version = "*"

[lib]
name = "clang_driver"
path = "src/lib.rs"
