[package]
license = "MIT"
name = "wasm-clang-driver"
repository = ""
version = "0.1.0"
exclude = ["*.iml", ".idea"]

[[bin]]
name = "wasm-clang"
path = "src/main.rs"

[[bin]]
name = "wasm-clangxx"
path = "src/main.rs"

[dependencies]
lazy_static = { version = "1.0", registry = "crates-io" }
env_logger = { version = "0.6.1", registry = "crates-io" }

[dependencies.wasm-ld-driver]
path = "../ld"
version = "*"

[dependencies.wasm-driver-utils]
path = "../util"
version = "1.0.0"

[lib]
name = "clang_driver"
path = "src/lib.rs"
