[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "cmake-driver"
version = "0.1.0"

[[bin]]
name = "wasm-cmake"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0"
regex = "0.2.2"
tempdir = "0.3.5"

[dependencies.util]
optional = false
path = "../util"

[lib]
name = "cmake_driver"
path = "src/lib.rs"
