[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "cmake-driver"
version = "0.1.0"
exclude = ["*.iml", ".idea"]

[[bin]]
name = "wasm-cmake"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0"
regex = "*"
tempdir = "0.3.5"
env_logger = "0.6.1"

[dependencies.util]
optional = false
path = "../util"

[lib]
name = "cmake_driver"
path = "src/lib.rs"
