[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "wasm-cmake-driver"
version = "0.1.0"
exclude = ["*.iml", ".idea"]

[[bin]]
name = "wasm-cmake"
path = "src/main.rs"

[dependencies]
lazy_static = { version = "1.0", registry = "crates-io" }
env_logger = { version = "0.6.1", registry = "crates-io" }

[dependencies.wasm-driver-utils]
path = "../util"
version = "1.0.0"

[lib]
name = "cmake_driver"
path = "src/lib.rs"
