[package]
license = "MIT"
name = "wasm-ld-driver"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
version = "0.1.0"
exclude = ["*.iml", ".idea"]

[[bin]]
name = "wasm-ld"
path = "src/main.rs"

[dependencies]
lazy_static = { version = "1.0", registry = "crates-io" }
env_logger = { version = "0.6.1", registry = "crates-io" }

[dependencies.wasm-driver-utils]
path = "../util"
version = "1.0.0"

[lib]
name = "ld_driver"
path = "src/lib.rs"
