[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
description = "Builds the system libraries for WebAssembly"
name = "sysroot"
version = "0.1.0"

[[bin]]
name = "wasm-sysroot"
path = "src/main.rs"

[dependencies]
lazy_static = "1.0"
regex = "*"
tempdir = "0.3.5"
cmake-driver = { path = "../cmake" }

[dependencies.clang-driver]
optional = false
path = "../clang/"

[dependencies.ld-driver]
optional = false
path = "../ld"

[dependencies.util]
optional = false
path = "../util"

[lib]
name = "sysroot_driver"
path = "src/lib.rs"
