[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
description = "Builds the system libraries for WebAssembly"
name = "sysroot"
version = "0.1.0"

[[bin]]
name = "wasm-sysroot"
path = "src/main.rs"

[lib]
name = "wasm_sysroot_builder"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.0"
regex = "*"
tempdir = "0.3.5"
cmake-driver = { path = "../cmake" }
dirs = "1.0.5"
log = "0.4.6"

[dependencies.clang-driver]
optional = false
path = "../clang/"

[dependencies.ld-driver]
optional = false
path = "../ld"

[dependencies.util]
optional = false
path = "../util"
