[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
description = "Builds the system libraries for WebAssembly"
name = "wasm-sysroot-builder"
version = "0.1.0"
exclude = ["*.iml", ".idea"]

[[bin]]
name = "wasm-sysroot"
path = "src/main.rs"

[lib]
name = "wasm_sysroot_builder"
path = "src/lib.rs"

[dependencies]
lazy_static = { version = "1.0", registry = "crates-io" }
tempdir = { version = "0.3.5", registry = "crates-io" }
dirs = { version = "1.0.5", registry = "crates-io" }
log = { version = "0.4.6", registry = "crates-io" }

[dependencies.wasm-cmake-driver]
optional = false
path = "../cmake/"
version = "0.1.0"

[dependencies.wasm-clang-driver]
optional = false
path = "../clang/"
version = "0.1.0"

[dependencies.wasm-ld-driver]
optional = false
path = "../ld"
version = "0.1.0"

[dependencies.wasm-driver-utils]
optional = false
path = "../util"
version = "1.0.0"
