[package]
license = "MIT"
name = "util-tests"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
version = "0.0.0"
exclude = ["*.iml", ".idea"]

[dependencies]
lazy_static = "*"
regex = "*"

[dependencies.wasm-driver-util]
path = "../util"

[lib]
name = "util_tests"
path = "lib.rs"
