[package]
build = "src/build.rs"
license = "MIT"
name = "util"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
version = "0.0.0"
exclude = ["*.iml", ".idea"]

[build-dependencies]
regex = "*"

[dependencies]
ar = "0.3.0"
ctrlc = "3.0.3"
dirs = "1.0.3"
lazy_static = "1.0"
maplit = "*"
regex = "*"
tempdir = "0.3.5"
log = "0.4.6"
git2 = "0.8.0"
