[package]
build = "src/build.rs"
license = "MIT"
name = "wasm-driver-utils"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
version = "1.0.0"
exclude = ["*.iml", ".idea"]
description = "A CLI tool utility crate I keep finding myself using for new things. Use at your own peril."

[build-dependencies]
regex = { version = "1.1.7", registry = "crates-io" }

[dependencies]
ar = { version = "0.3.0", registry = "crates-io" }
ctrlc = { version = "3.0.3", registry = "crates-io" }
dirs = { version = "1.0.3", registry = "crates-io" }
lazy_static = { version = "1.0", registry = "crates-io" }
maplit = { version = "1.0.1", registry = "crates-io" }
regex = { version = "1.1.7", registry = "crates-io" }
tempdir = { version = "0.3.5", registry = "crates-io" }
log = { version = "0.4.6", registry = "crates-io" }
git2 = { version = "0.8.0", registry = "crates-io" }
