[package]
build = "src/build.rs"
license = "MIT"
name = "wasm-driver-utils"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
version = "1.0.1"
exclude = ["*.iml", ".idea"]
description = "A CLI tool utility crate I keep finding myself using for new things. Use at your own peril."

[build-dependencies]
regex = { version = "1.1.7" }

[dependencies]
ar = { version = "0.3.0" }
ctrlc = { version = "3.0.3" }
dirs = { version = "1.0.3" }
lazy_static = { version = "1.0" }
maplit = { version = "1.0.1" }
regex = { version = "1.1.7" }
tempdir = { version = "0.3.5" }
log = { version = "0.4.6" }
git2 = { version = "0.8.0" }
