[package]
name = "pnacl-ld-driver"
version = "0.0.0"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
license = "MIT"

[lib]
name = "pnacl_ld"
path = "lib.rs"

[dependencies.pnacl-util]
path = "../util"
version = "*"

[dependencies.pnacl-opt-driver]
path = "../opt"
version = "*"

[dependencies]
regex = "*"
regex_macros = "*"
