[package]
name = "pnacl-util"
version = "0.0.0"
repository = "https://github.com/DiamondLovesYou/pnacl-clang-driver"
license = "MIT"
build = "build.rs"

[lib]
name = "util"
path = "lib.rs"

[dependencies.elf]
git = "https://github.com/DiamondLovesYou/rust-elf.git"

[build-dependencies]
regex = "*"
regex_macros = "*"

[dependencies]
regex = "*"
regex_macros = "*"
maplit = "*"
